--- a/Gui/Language/English/inventoryDescriptions.json
+++ b/Gui/Language/English/inventoryDescriptions.json
@@ -1,18 +1,18 @@
 {
    "6a9dbff5-7562-4e9a-99ae-3590ece88112" : {
-      "description" : "To convert you need to place down a fast logic gate and shoot it with a spud.\\nTo convert back you use a hammer on a fast logic gate.",
+      "description" : "",
       "title" : "Fast Logic Gate"
    },
    "d8b529ad-3865-40fa-b798-cb2868e5dc4d" : {
-      "description" : "To convert you need to place down a fast logic gate and shoot it with a spud.\\nTo convert back you use a hammer on a fast logic gate.",
+      "description" : "",
       "title" : "End Tick Button"
    },
    "db0bc11b-c083-4a6a-843f-73ac1033e6fe" : {
-      "description" : "To convert you need to place down a fast logic gate and shoot it with a spud.\\nTo convert back you use a hammer on a fast logic gate.",
+      "description" : "",
       "title" : "Fast Timer"
    },
    "dcb72c88-76cc-4fb2-87b7-b8a6b83f898" : {
-      "description" : "To convert you need to place down a fast logic gate and shoot it with a spud.\\nTo convert back you use a hammer on a fast logic gate.",
+      "description" : "",
       "title" : "Fast Warehouse Square Light"
    },
    "018e4ca0-c5be-7f80-a80f-259c5951594b" : {
