--- a/Gui/Language/English/inventoryDescriptions.json
+++ b/Gui/Language/English/inventoryDescriptions.json
@@ -4,7 +4,7 @@
       "title" : "MT Multitool"
    },
    "6a9dbff5-7562-4e9a-99ae-3590ece88112" : {
-      "description" : "Speed Up: You can change simulation speed of Fast Logic by pressing U or Crouch + U on a Fast Logic block.\n\nColored Connections: The multitool in Colorizer mode can change the color of logic gate connection dots.\n\nSilicon: The multitool in Silicon Convert mode can convert parts of your creation to silicon. This will make your game less laggy and allow you to spawn much larger creations.",
+      "description" : "Speed Up: You can change simulation speed of Fast Logic by pressing U or Crouch + U on a Fast Logic block.\n\nColored Connections: The Multitool in Colorizer mode can change the color of logic gate connection dots.\n\nSilicon: The Multitool in Silicon Convert mode can convert parts of your creation to silicon. This will make your game less laggy and allow you to spawn much larger creations.",
       "title" : "Fast Logic Gate"
    },
    "d8b529ad-3865-40fa-b798-cb2868e5dc4d" : {
