--- a/Gui/Language/English/inventoryDescriptions.json
+++ b/Gui/Language/English/inventoryDescriptions.json
@@ -1,6 +1,6 @@
 {
    "018e4ca0-c5be-7f80-a80f-259c5951594b" : {
-      "description" : "A logic multitool developed by MTech.",
+      "description" : "A logic multitool developed by MTech. This tool can be used to change the color of logic gate connection dots, convert parts of your creation to silicon, and make large amounts of connections in parallel.",
       "title" : "MT Multitool"
    },
    "6a9dbff5-7562-4e9a-99ae-3590ece88112" : {
