--- a/Renderable/generate_silicon.ipynb
+++ b/Renderable/generate_silicon.ipynb
@@ -30,7 +30,25 @@
     "                flat = True\n",
     "            if flat and z > 8:\n",
     "                continue\n",
-    "            shapes.append((x, y, z))\n"
+    "            shapes.append((x, y, z))\n",
+    "\n",
+    "smolrange = [1, 2, 3, 4, 5, 6, 7, 8, 10, 12, 14, 16]\n",
+    "bigrange = smolrange + [20, 24, 32]\n",
+    "for x in bigrange:\n",
+    "    for y in bigrange:\n",
+    "        if y > x:\n",
+    "            continue\n",
+    "        for z in smolrange:\n",
+    "            if z > y:\n",
+    "                continue\n",
+    "            flat = False\n",
+    "            if x > 8 or y > 8 or z > 8:\n",
+    "                flat = True\n",
+    "            if flat and z > 8:\n",
+    "                continue\n",
+    "            if (x, y, z) in shapes:\n",
+    "                continue\n",
+    "            shapes.append((x, y, z))"
    ]
   },
   {
@@ -221,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
